# decentralized_storage_system

./: Cargo.toml  README.md  dfx.json  did.sh
src/decentralized_file_storage_backend/: Cargo.toml  decentralized_file_storage_backend.did
src/decentralized_file_storage_backend/src/: lib.rs
