[package]
name = "decentralized_file_storage_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-cdk = "0.17.0"  # Use the latest stable version available
ic-cdk-macros = "0.17.0"  # Match the version of ic-cdk
lazy_static = "1.4" # or the latest version
serde = "1.0.152"
serde_derive = "1.0"
serde_json = "1.0"
candid-extractor = "0.1.4"                                                                                                                                                                                                                                                                                                                                      